Template y Factory Methods aplicados

--- a/BestPractices/Views/Home/Index.cshtml
+++ b/BestPractices/Views/Home/Index.cshtml
@@ -63,4 +63,5 @@
 
     <a href="/Home/AddMustang">Add Mustang</a>
     <a href="/Home/AddExplorer">Add Explorer</a>
+    <a href="/Home/AddEscape">Add Escape</a> // Modelo nuevo
 </div>
