Ajustes orden en codigo

--- a/BestPractices/Views/Home/Index.cshtml
+++ b/BestPractices/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
         <th>Marca</th>
         <th>Modelo</th>
         <th>Color</th>
+        <th>Año</th>
         <th>Gallons</th>
         <th>Status</th>
         <th>Actions</th>
@@ -38,6 +39,9 @@
         </td>
         <td>
             @vehicle.Color
+        </td>
+        <td>
+            @vehicle.Year
         </td>
         <td>
             @vehicle.Gas.ToString("N1")
@@ -63,5 +67,5 @@
 
     <a href="/Home/AddMustang">Add Mustang</a>
     <a href="/Home/AddExplorer">Add Explorer</a>
-    <a href="/Home/AddEscape">Add Escape</a> // Modelo nuevo
+    <a href="/Home/AddEscape">Add Escape</a> <!-- Modelo nuevo -->
 </div>
